# rust-os

./: README.md
os/: Cargo.toml
os/.cargo/: config
os/src/: main.rs  vga_buffer.rs
